lnet/lnet/lib-move.c
@@ -4693,7 +4693,7 @@ lnet_parse(struct lnet_ni *ni, struct lnet_hdr *hdr,
 		lnet_msg_free(msg);
 		if (rc == -ESHUTDOWN)
 			/* We are shutting down.  Don't do anything more */
-			return 0;
+			return rc;
 		goto drop;
 	}
 
